<resources>
    <string name="app_name">DeliverBuddy</string>
    <string name="name1">First Name</string>
    <string name="name2">Last Name</string>
    <string name="name">Name</string>
    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">ZIP</string>
    <string name="phone">Phone #</string>
    <string name="tip">Tip</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Order Total</string>
    <string name="new_deliv">New Delivery</string>
    <string name="edit_deliv">Edit Delivery</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="empty_msg">Click the \"+\" to add data</string>
    <string name="reqfield">Required field*</string>
</resources>
