<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewDeliv">

    <include
        android:id="@+id/toolbar_view"
        layout="@layout/default_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/view_name1_hint"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="252dp"
        android:layout_marginRight="252dp"
        android:gravity="center_vertical"
        android:text="@string/name1"
        android:textColor="#969696"
        android:textSize="20sp"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_name1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="155dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintStart_toEndOf="@+id/view_name1_hint"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_name2_hint"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="252dp"
        android:layout_marginRight="252dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/name2"
        android:textColor="#969696"
        android:textSize="20sp"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_name1_hint" />

    <TextView
        android:id="@+id/view_name2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintStart_toEndOf="@+id/view_name2_hint"
        app:layout_constraintTop_toBottomOf="@+id/view_name1" />

    <TextView
        android:id="@+id/view_address_hint"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="252dp"
        android:layout_marginRight="252dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/address"
        android:textColor="#969696"
        android:textSize="20sp"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_name2_hint" />

    <TextView
        android:id="@+id/view_address"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintStart_toEndOf="@+id/view_address_hint"
        app:layout_constraintTop_toBottomOf="@+id/view_name2" />

    <TextView
        android:id="@+id/view_phone_hint"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="252dp"
        android:layout_marginRight="252dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/phone"
        android:textColor="#969696"
        android:textSize="20sp"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_address_hint" />

    <TextView
        android:id="@+id/view_phone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintStart_toEndOf="@+id/view_phone_hint"
        app:layout_constraintTop_toBottomOf="@+id/view_address" />

    <TextView
        android:id="@+id/view_total_hint"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="252dp"
        android:layout_marginRight="252dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/total"
        android:textColor="#969696"
        android:textSize="20sp"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_phone_hint" />

    <TextView
        android:id="@+id/view_total"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintStart_toEndOf="@+id/view_total_hint"
        app:layout_constraintTop_toBottomOf="@+id/view_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>